build/errors/error1.txt
$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2   -DHITGEN  -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\""   -MT hitgen-hitgen.o -MD -MP -MF .deps/hitgen-hitgen.Tpo -c -o hitgen-hitgen.o `test -f 'util/hitgen.c' || echo './'`util/hitgen.c
util/hitgen.c: In function ‘generate_HI’:
util/hitgen.c:138:7: error: ‘DSA_generate_parameters’ is deprecated [-Werror=deprecated-declarations]
       dsa = DSA_generate_parameters(opts->bitsize, seed, sizeof(seed),
       ^~~
In file included from /usr/include/openssl/asn1.h:15:0,
                 from /usr/include/openssl/dh.h:18,
                 from /usr/include/openssl/dsa.h:31,
                 from util/hitgen.c:39:
/usr/include/openssl/dsa.h:122:1: note: declared here
 DEPRECATEDIN_0_9_8(DSA *DSA_generate_parameters(int bits,
 ^
util/hitgen.c:156:7: error: ‘RSA_generate_key’ is deprecated [-Werror=deprecated-declarations]
       rsa = RSA_generate_key(opts->bitsize, e, cb, stdout);
       ^~~
In file included from /usr/include/openssl/rsa.h:13:0,
                 from util/hitgen.c:40:
/usr/include/openssl/rsa.h:193:1: note: declared here
 DEPRECATEDIN_0_9_8(RSA *RSA_generate_key(int bits, unsigned long e, void
 ^
util/hitgen.c:212:65: error: dereferencing pointer to incomplete type ‘DSA {aka struct dsa_st}’
       xmlNewChild(hi, NULL, BAD_CAST "P", BAD_CAST BN_bn2hex(dsa->p));
                                                                 ^~
util/hitgen.c:221:65: error: dereferencing pointer to incomplete type ‘RSA {aka struct rsa_st}’
       xmlNewChild(hi, NULL, BAD_CAST "N", BAD_CAST BN_bn2hex(rsa->n));
                                                                 ^~
cc1: all warnings being treated as errors
Makefile:1103: recipe for target 'hitgen-hitgen.o' failed
make[3]: *** [hitgen-hitgen.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2
